# pq-aposindiv-simulator

./: .gitignore  AUTH_SETUP_GUIDE.md  CHANGELOG_CLEANUP.md  CLAUDE.md  Dockerfile  LICENSE  PRODUCTION_AUTH_SETUP.md  RAILWAY_DEPLOY.md  RAILWAY_VARIABLES.txt  README.md  generate_production_secret.py  railway.toml  render.yaml  simulador_individual_design_spec.md  simulador_individual_spec.md  test-slider-alignment.js
simulador-atuarial-individual/backend/: DATABASE_GUIDE.md  Dockerfile  debug_suggestions.py  extract_br_ems_2010.py  fix_at83_direct.py  fix_at83_tables.py  investigate_at83.py  investigate_at83_simple.py  investigate_br_ems.py  mortality_tables_config.json  mortality_tables_config_generated.json  pyproject.toml  simple_debug.py  test_admin_costs.py  test_api_cd.py  test_bd_cd_api_equivalence.py  test_cd_simple.py  test_disability_scenario.py  test_simple_cd.py  test_ws.py
simulador-atuarial-individual/backend/data/: simulador.db
simulador-atuarial-individual/backend/data/mortality_tables/: at_2000_female.csv  at_2000_male.csv  br_ems_2010_female.csv  br_ems_2010_female_OLD_INCORRECT.csv  br_ems_2010_male.csv  br_ems_2010_male_OLD_INCORRECT.csv  br_ems_2021_female.csv  br_ems_2021_male.csv  br_ems_2021_male_OLD_INCORRECT.csv
simulador-atuarial-individual/backend/src/: __init__.py  database.py
simulador-atuarial-individual/backend/src/api/: auth_router.py  main.py  mortality_tables.py  reports_router.py
simulador-atuarial-individual/backend/src/core/: __init__.py  abstract_calculator.py  actuarial_engine.py  actuarial_math.py  auth_config.py  base_projection_engine.py  bd_calculator.py  cd_calculator.py  constants.py  context_manager.py  decrement_tables.py  financial_math.py  logging_config.py  metrics_manager.py  mortality_config.py  mortality_initializer.py  mortality_loader.py  mortality_provider.py  mortality_tables.py  multi_life_actuarial.py  normal_cost_calculator.py  (+11 more)
simulador-atuarial-individual/backend/tests/: README.md  test_actuarial_engine.py  test_actuarial_equivalent.py  test_admin_costs.py  test_api_endpoints.py  test_bd_calculator.py  test_cd_bd_equivalence.py  test_cd_calculator.py  test_core_modules.py  test_formatters.py  test_models_and_utils.py  test_mortality_tables.py  test_projection_builder.py  test_rates_conversion.py  test_smoke_api.py  test_smoke_calculations.py  test_smoke_calculations_simple.py  test_suggestions_engine.py  test_validators.py
(+231 files in other folders)
